# Altairfc_V2

./: .gitignore  CLAUDE.md  README.md  flight.service
altairfc/: main.py  pyproject.toml
altairfc/config/: settings.py  settings.toml
altairfc/controls/: controller.py  error_computation.py
altairfc/core/: buzzer_player.py  datastore.py  lifecycle.py  log_format.py  scheduler.py  subprocess_task.py  task_base.py  watchdog.py
altairfc/drivers/: build_all.sh  build_gps.sh  build_ina3221.sh  buzzer.py  gps_driver.c  gps_driver.py  ina3221_driver.c  ina3221_driver.py  mavlink.py  mcp23017.py  port_detect.py  servo.py  vesc_interface.py
altairfc/hw_info/: buzzer.txt  gps_setup.txt  indicator_LED_pins.txt  led.txt
altairfc/logs/2026-03-24_09-54-31/: AttitudePacket.csv  EnvironmentPacket.csv  EventPacket.csv  FlightSettingsPacket.csv  HeartbeatPacket.csv  LocalGpsPacket.csv  MMVescPacket.csv  MavlinkGpsPacket.csv  PhotodiodePacket.csv  PointingPacket.csv  PowerPacket.csv  RWVescPacket.csv
altairfc/logs/2026-05-07_18-44-52/: EventPacket.csv  (+11 more)
altairfc/tasks/: command_receiver_task.py  control_task.py  datalogger_task.py  flight_stage_task.py  gps_task.py  mavlink_task.py  mm_task.py  photodiode_task.py  pitch_task.py  power_task.py  rw_task.py  vesc_task.py
altairfc/telemetry/: COMMANDS.md  command_registry.py  registry.py  serializer.py  telemetry_task.py  transport.py
altairfc/tests/: test_datastore.py  test_gpio.py  test_gps_i2c.py  test_ina3221.py  test_io_exp.py  test_led_on.py  test_leds.py  test_scheduler.py  test_serializer.py  test_servo.py  test_vesc.py
(+164 files in other folders)
