[project]
name = "altairfc"
version = "0.1.0"
description = ""
authors = [
    {name = "Yorgo",email = "abouhaidar.yorgo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pymavlink (>=2.4.49,<3.0.0)"
]

[tool.poetry]
packages = [{include = "altairfc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
