[project]
name = "altairfc"
version = "0.1.0"
description = ""
authors = [
    {name = "Yorgo",email = "abouhaidar.yorgo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pymavlink (>=2.4.49,<3.0.0)",
    "serial (>=0.0.97,<0.0.98)",
    "pyserial (>=3.5,<4.0)"
]

[tool.poetry.dependencies]
pytest = {version = ">=8.0,<9.0", optional = true}

[tool.poetry.extras]
dev = ["pytest"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
